feat:  add better error treatment and methods to list and remove racks
